--- a/test-browser.html
+++ b/test-browser.html
@@ -9,12 +9,12 @@
 		<h2>Test</h2>
 		<pre>
 const json = {"pi": "3.14159265359", "e": "2.7182818284", "prime": [2, 3, 5, 7, 11, 13, 17, 19], "1+6": 7};
-const prettyJson = JSON2_mod.stringify(json, undefined, 2, true, "'");
+const prettyJson = JSON2_mod.stringify(json, undefined, 2, true, 'single');
 </pre>
 		<h2>Expected</h2>
 		<pre id="expected">{
-  pi: "3.14159265359",
-  e: "2.7182818284",
+  pi: '3.14159265359',
+  e: '2.7182818284',
   prime: [
     2,
     3,
@@ -25,7 +25,7 @@ const prettyJson = JSON2_mod.stringify(json, undefined, 2, true, "'");
     17,
     19
   ],
-  "1+6": 7
+  '1+6': 7
 }</pre>
 
 		<h2>Execution</h2>
@@ -38,15 +38,15 @@ const prettyJson = JSON2_mod.stringify(json, undefined, 2, true, "'");
 		<script>
 			(function() {
 			    const json = {"pi": "3.14159265359", "e": "2.7182818284", "prime": [2, 3, 5, 7, 11, 13, 17, 19], "1+6": 7};
-			    const prettyJson = JSON2_mod.stringify(json, undefined, 2, true, "'");
+			    const prettyJson = JSON2_mod.stringify(json, undefined, 2, true, 'single');
                 const expected = document.getElementById('expected');
 			    const execution = document.getElementById('execution');
 				const result = document.getElementById('result');
                 execution.innerText = prettyJson;
 				if (expected.innerText.trim() == execution.innerText.trim()) {
-					result.innerText = "Success!"
+					result.innerText = 'Success!';
 				} else {
-					result.innerText = "Failed."
+					result.innerText = 'Failed.';
 				}
 		    }.call(this));
 		</script>
